Bug 1856088 - Handle scroll anchor adjustments as an absolute scroll position updates behind a pref. r=botond

Differential Revision: https://phabricator.services.mozilla.com/D190888