gfx/layers/ipc/LayersMessageUtils.h
@@ -507,7 +507,7 @@ template <>
 struct ParamTraits<mozilla::ScrollUpdateType>
     : public ContiguousEnumSerializerInclusive<
           mozilla::ScrollUpdateType, mozilla::ScrollUpdateType::Absolute,
-          mozilla::ScrollUpdateType::PureRelative> {};
+          mozilla::ScrollUpdateType::MergeableAbsolute> {};
 
 template <>
 struct ParamTraits<mozilla::ScrollMode>
